tests/negative/Internal/PatternConstructor.juvix
module PatternConstructor;
  type A :=
    a : A;

type B :=
    b : B;

  f : A → B;
  f b := b;

end;
